# spendshare

./: .env.example  .gitignore  LICENSE  README.md  generate_openapi.py  openapi.json  requirements.txt  uv_setup_guide.md
app/: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  utils.py
app/core/: security.py
app/crud/: crud_expense.py  crud_group.py  crud_user.py
app/db/: database.py
app/frontend/src/app/: globals.css  layout.tsx
app/frontend/src/app/groups/: page.tsx
app/models/: models.py  schemas.py
app/routers/: expenses.py  frontend.py  groups.py  users.py
app/services/: expense_service.py
app/src/: config.py  dependencies.py  main.py
app/src/core/: email.py  security.py
app/src/db/: database.py
app/src/models/: models.py  schemas.py
app/src/routers/: balances.py  beta.py  conversion_rates.py  currencies.py  expenses.py  groups.py  settlements.py  transactions.py  users.py
app/src/services/: balance_service.py  expense_service.py
app/static/css/: styles.css
app/templates/: base.html  dashboard.html  login.html  signup.html  view_group.html
app/tests/: conftest.py  test_balance_service.py  test_balances.py  test_beta.py  test_conversion_rates.py  test_currencies.py  test_email.py  test_expense_receipts.py  test_expenses.py  test_expenses_extended.py  test_frontend.py  test_groups.py  test_groups_extended.py  test_main.py  test_multi_currency_settlements.py  test_security.py  test_settlements.py  test_settlements_expenses.py  test_settlements_transactions.py  test_transactions.py  test_users.py  test_users_extended.py
(+103 files in other folders)
